<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/next_menu_item"
        android:icon="@mipmap/right_arrow"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:id="@+id/next_item"/>

    <item android:title="@string/prev_menu_item"
        android:icon="@mipmap/left_arrow"
        app:showAsAction="always"
        android:orderInCategory="0"
        android:id="@+id/prev_item"
        />

</menu>