...
            android:id="@+id/ingredients_desc"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:padding="8dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bookmark_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:backgroundTint="@color/yellow"
...
            android:paddingBottom="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/steps_recycler_view"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

