...
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorPrimary"
                    android:visibility="invisible"
                    android:id="@+id/prev_step_btn"
                    android:layout_margin="8dp"/>
                <Button
                    android:id="@+id/next_step_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/right_arrow"
                    android:text="@string/next_button_text"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="false"
...
