...
    android:id="@+id/main_layout"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/grey">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        />
    <ProgressBar
...
